--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
 	<title>37signals: Web-based collaboration apps for small business</title>
 	<!-- Roboto and Crimsom fonts -->
@@ -30,7 +31,7 @@
 		</ul>
 	</nav>
 	<header>
-		<img src="img/logo-37s-large.png" alt="37signals logo">
+		<img class="logo" src="img/logo-37s-large.png" alt="37signals logo">
 		<h1>Making collaboration productive and enjoyable for people every day.</h1>
 		<h5>Frustration-free web-based apps for collaboration, sharing information, and making decisions.</h5>
 	</header>
@@ -67,7 +68,7 @@
 		</h2>
 		<div class="meet">
 			<a href="#">Customers</a>
-			<p>Meet some customers</p>
+			<p class="msc">Meet some customers</p>
 		</div>
 		<div class="arrow-left">
 			<img src="img/arrow-customer.png" alt="37signals arrow">
@@ -77,9 +78,9 @@
 				<img src="img/img-world-badge.png" alt="Trusted by millions of people in over 30 countries">
 			</a>
 		</div>
-		<p>	Our loyal customers include designers, developers, freelancers, lawyers, accountants, architects, non-profits, charities, universities, PR firms, retailers, manufacturers, consultants, authors, publishers, government agencies, students, marketers, airlines, restaurants, filmmakers, farmers, and just about everyone in-between.</p>
-		<p>The world's most popular brands depend on our products every day. We'll never take their trust - or your trust - for granted.</p>
-		<img src="img/logos-companies-bw.png" alt="The best brands use our products">
+		<p class="olc">	Our loyal customers include designers, developers, freelancers, lawyers, accountants, architects, non-profits, charities, universities, PR firms, retailers, manufacturers, consultants, authors, publishers, government agencies, students, marketers, airlines, restaurants, filmmakers, farmers, and just about everyone in-between.</p>
+		<p class="twm">The world's most popular brands depend on our products every day. We'll never take their trust - or your trust - for granted.</p>
+		<img class="partners" src="img/logos-companies-bw.png" alt="The best brands use our products">
 	</section>
 	<hr> 
 	<section class="manifesto">
@@ -149,7 +150,7 @@
 		<div class="crumple">
 			<a href="#">
 				<img src="img/img-crumple.png" alt="crumpled paper">
-				<p>Find out more</p>
+				<p class="fom">Find out more</p>
 			</a>
 		</div>
 	</section>
